--- a/style.css
+++ b/style.css
@@ -1,24 +1,34 @@
-body {
+*{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: border-box !important;
   }
-  ol, ul{
-    margin-bottom: 0;
-  }
- .link{
-    text-decoration: none;
-    color: black;
- }
 
+p{
+    margin-bottom: 0 !important;
+
+}
+h2{
+    margin-bottom: 0 !important;
+}
   ul {
     list-style: none;
   }
+  50
+
+
+  input {-
+    webkit-appearance: none; box-shadow: none !important; }
+  :-webkit-autofill { color: #fff !important; 
+}
+  
+
   #hero-carousel{
     margin-bottom: 0;
   }
 .container{
-    width: 1360px;
+    max-width: 1360px;
+    height: 100%;
 }
 .item-1{
     height: 630px;
@@ -41,12 +51,17 @@ header{
     align-items: flex-end;
     gap: 47px;
 }
+.link{
+    text-decoration: none;
+    color: black;
+    border: 10px solid transparent;
+ }
 .link:hover{
     color: white !important;
-    border: solid 10px #006cd1;
     background-color: #006cd1;
     border-radius: 5px;
-    transition: 0.5s;
+    transition: 0.2s;
+    border-color: #006cd1;
 }
 .carousel-control-prev-icon{
     filter: invert(100%);
@@ -85,7 +100,7 @@ font-weight: bold;
 line-height: 37px;
 font-style: normal;
 text-align: left;
-color: #006cd1; */
+color: #006cd1; 
 
 
  }
@@ -105,4 +120,376 @@ flex-direction: column;
 justify-content: center;
 margin-bottom: 11%;
 gap: 35px;
+}
+
+.second-section{
+    display: flex;
+    flex-direction: row;
+    margin: 95px;
+    gap: 60px;
+    max-width: 1172px !important;
+    max-height: 680px !important;
+}
+.services{
+    max-width: 241px;
+    height: 100%;
+}
+.services-h3{
+    font-family: "Raleway";
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 37px;
+    font-style: normal;
+    text-align: left;
+    color: #8d8d8d;
+}
+.services-h2{
+    padding-top: 5px;
+    padding-bottom: 30px !important;
+    font-family: "Raleway";
+    font-size: 26px;
+    font-weight: normal;
+    line-height: 37px;
+    font-style: normal;
+    text-align: left;
+    color: #1a1a1b;
+}
+.services-description{
+    font-family: "Raleway";
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 22px;
+    font-style: normal;
+    text-align: left;
+    color: #8d8d8d;
+}
+.modal{
+    border: none !important;
+}
+.cards-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    max-width: 1172px;
+    max-height: 680px !important;
+}
+
+.card{
+    border: none !important;
+    --bs-card-inner-border-radius: none !important;
+    width: 240px !important;
+}
+.card:hover{
+        transform: scale(1.1);
+        transition: transform 0.4s ease-in-out;
+
+}
+.card-img{
+    width: 100% !important;
+    height: 181px !important;
+    box-sizing: border-box !important;
+}
+.card-title{
+    padding-top: 22px;
+    padding-bottom: 8px;
+    font-family: "Raleway";
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 22px;
+    font-style: normal;
+    text-align: left;
+    color: #1a1a1b;
+}
+.card-description{
+    font-family: "Raleway";
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 22px;
+    font-style: normal;
+    text-align: left;
+    color: #8d8d8d;
+}
+.third-section{
+    position: relative;
+    width: 100%;
+    height: 500px;
+    background-image: url('images/xavier-coiffic-1068988-unsplash.png');
+    color: white;
+    background-size: cover;
+}
+.third-section::after{
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.7) 100%);
+}
+.video-content{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.third-section-h2{
+    padding-top: 45px;
+    font-family: "Raleway";
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 37px;
+    font-style: normal;
+    color: #ffffff;
+}
+.third-section-h3{
+    font-family: "Raleway";
+    font-size: 26px;
+    font-weight: normal;
+    line-height: 37px;
+    font-style: normal;
+    color: #ffffff;
+}
+.video-section{
+    position: relative;
+    z-index: 1;
+    display: flex !important;
+    flex-direction: column;
+    text-align: center;
+    gap: 50px;
+}
+.video-img{
+    width: 660px;
+    height: 314px;
+}
+.video-img:hover{
+        transform: scale(1.1);
+        transition: transform 0.3s ease-in-out;
+
+}
+.statistic-section{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: space-around;
+    margin-top: 90px;
+}
+
+.statistic-img{
+    width: 60px;
+    height: 65px;
+}
+.statistic-items{
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+.statistic-items h2 {
+    font-family: "Lato";
+    font-size: 32px;
+    font-weight: bold;
+    line-height: 22px;
+    font-style: normal;
+    color: #1a1a1b;
+}
+#count1{
+    animation: count-up 5s ease-out forwards;
+}
+#count2{
+    animation: count-up 6s ease-out forwards;
+}
+#count3{
+    animation: count-up 4s ease-out forwards;
+}
+#count4{
+    animation: count-up 4s ease-out forwards;
+}
+.statistic-items p{
+    padding-top: 4px;
+    font-family: "Raleway";
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 22px;
+    font-style: normal;
+    color: #1a1a1b;
+}
+@keyframes count-up {
+    from {
+      opacity: 0;
+      transform: translateY(50px);
+    }
+    to {
+      opacity: 1;
+      transform: none;
+    }
+  }
+
+.fourth-section{
+    Width:863px;
+    Height:492px;
+  }
+.tour-packages{
+    display: flex;
+    flex-direction: column;
+   text-align: center;
+   margin-bottom: 78px;
+   margin-top: 65px;
+}
+.tour-packages h3{
+    font-family: "Raleway";
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 37px;
+    font-style: normal;
+    color: #8d8d8d;
+}
+.tour-packages h2{
+    font-family: "Raleway";
+    font-size: 26px;
+    font-weight: normal;
+    line-height: 37px;
+    font-style: normal;
+    color: #1a1a1b;
+}
+.tour-cards{
+
+    display: flex;
+    justify-content: center;
+    gap: 31px;
+
+}
+.tour{
+    display: flex;
+    flex-direction: column;
+   text-align: center;
+    width: 267px;
+    height: 358px;
+    background-color: #ffffff;
+    border: 1px solid grey transparent ;
+    filter: drop-shadow(0px 0px 10px rgba(101,101,101,0.2 )) !important;
+    transition: transform 0.3s ease-out;
+}
+.tour:hover{
+    transform: translateY(-15px);
+}
+  .tour-cards img{
+    width: 100% !important ;
+    height: 241px;
+  }
+.packages-title{
+    font-family: "Raleway";
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 37px;
+    font-style: normal;
+    color: #4b54fa !important;
+  }
+  .package-price{
+    padding-top: 10px;
+    font-family: "Raleway";
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 37px;
+    font-style: normal;
+    color: #1a1a1b;
+  }
+  .packages-description{
+    font-family: "Raleway";
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 37px;
+    font-style: normal;
+    color: #1a1a1b;
+  }
+  .form-section{
+    position: relative;
+    background-image: url(images/vidar-nordli-mathisen-572455-unsplash.png);
+    width: 100%;
+    height: 350px;
+    margin-top: 70px;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .form-section::after{
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(59,210,207) 0%, rgba(0,0,0,0.7) 100%);
+  }
+  form{
+    position: relative;
+    z-index: 1;
+    text-align: center;
+    margin-top:60px ;
+  
+  }
+  input{
+    width: 395px;
+    height: 50px;
+    background-color: transparent !important;
+    border-color: #ffffff;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 25px;
+}
+input::placeholder{
+    padding-left: 30px;
+    font-family: "Raleway";
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 37px;
+    font-style: normal;
+    color: #ffffff;
+}
+input:focus {
+    outline: none;
+  }
+  
+  input:focus::placeholder {
+    color: transparent;
+  }
+button{
+    width: 155px;
+    height: 50px;
+    border-color: #ffffff;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 25px !important;
+    background: #ffffff
+}
+button:hover{
+    box-shadow: #1a1a1b;
+    background-color:blue;
+    color: #fff;
+    transition: 0.5s;
+}
+.sale h2{
+    position: relative;
+    z-index: 1;
+    font-family: "Raleway";
+    font-size: 34px;
+    font-weight: normal;
+    line-height: 37px;
+    font-style: normal;
+    text-align: center;
+    color: #ffffff;
+}
+.discaunt h3{
+    position: relative;
+    z-index: 1;
+    margin-top: 20px;
+    font-family: "Raleway";
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 37px;
+    font-style: normal;
+    text-align: center;
+    color: #ffffff;
 }
