--- a/style.css
+++ b/style.css
@@ -14,13 +14,7 @@ h2{
   ul {
     list-style: none;
   }
-  50
 
-
-  input {-
-    webkit-appearance: none; box-shadow: none !important; }
-  :-webkit-autofill { color: #fff !important; 
-}
   
 
   #hero-carousel{
@@ -32,6 +26,7 @@ h2{
 }
 .item-1{
     height: 630px;
+    position: relative;
 }
 .img-1{
     height:100%;
@@ -69,6 +64,17 @@ header{
 .carousel-control-next-icon{
     filter: invert(100%);
 }
+
+.item-1::before{
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(68, 148, 153, 0.3), rgba(83, 181, 183, 0.6));
+};
 .coment{
 width: 314px;
 height: 22px;
@@ -78,8 +84,12 @@ line-height: 37px;
 font-style: normal;
 text-align: left;
 color: #ffffff;
+position: relative;
+z-index: 1;
 }
+
 .heading{
+
 width: 588px;
 height: 89px;
 font-family: "Arial";
@@ -89,6 +99,8 @@ line-height: 52.95845413208008px;
 font-style: normal;
 text-align: left;
 color: #ffffff;
+position: relative;
+z-index: 1;
 
 }
 .price{
@@ -101,9 +113,10 @@ line-height: 37px;
 font-style: normal;
 text-align: left;
 color: #006cd1; 
-
-
+position: relative;
+z-index: 1;
  }
+
 .carousel-img{
 position: absolute;
 width: 287px;
@@ -111,6 +124,7 @@ height: 92px;
 top: 28%;
 left: 505px;
 bottom: 50%;
+top: 33%;
 }
 
 .carousel-caption{ 
@@ -181,7 +195,7 @@ gap: 35px;
 }
 .card:hover{
         transform: scale(1.1);
-        transition: transform 0.4s ease-in-out;
+        transition: transform 0.3s ease-in-out;
 
 }
 .card-img{
@@ -292,37 +306,6 @@ gap: 35px;
     font-style: normal;
     color: #1a1a1b;
 }
-#count1{
-    animation: count-up 5s ease-out forwards;
-}
-#count2{
-    animation: count-up 6s ease-out forwards;
-}
-#count3{
-    animation: count-up 4s ease-out forwards;
-}
-#count4{
-    animation: count-up 4s ease-out forwards;
-}
-.statistic-items p{
-    padding-top: 4px;
-    font-family: "Raleway";
-    font-size: 16px;
-    font-weight: normal;
-    line-height: 22px;
-    font-style: normal;
-    color: #1a1a1b;
-}
-@keyframes count-up {
-    from {
-      opacity: 0;
-      transform: translateY(50px);
-    }
-    to {
-      opacity: 1;
-      transform: none;
-    }
-  }
 
 .fourth-section{
     Width:863px;
@@ -455,7 +438,7 @@ input:focus {
   input:focus::placeholder {
     color: transparent;
   }
-button{
+form button{
     width: 155px;
     height: 50px;
     border-color: #ffffff;
@@ -464,7 +447,7 @@ button{
     border-radius: 25px !important;
     background: #ffffff
 }
-button:hover{
+form button:hover{
     box-shadow: #1a1a1b;
     background-color:blue;
     color: #fff;
@@ -492,4 +475,92 @@ button:hover{
     font-style: normal;
     text-align: center;
     color: #ffffff;
+}
+.evaluations{
+    width: 1166px;
+    height: 558px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    margin: 67px 95px 0 95px;
+}
+.text-content2{
+    width: 100%;
+}
+.text-content2 h3{
+    font-family: "Raleway";
+    font-size: 15.985739707946777px;
+    font-weight: normal;
+    line-height: 36.96701431274414px;
+    font-style: normal;
+    color: #8d8d8d;
+    }
+    .text-content2 h2{
+        font-family: "Raleway";
+        font-size: 25.97681999206543px;
+        font-weight: normal;
+        line-height: 36.96701431274414px;
+        font-style: normal;
+        color: #1a1a1b;
+    }
+.coments{
+    width: 368px;
+    height: 409px;
+    margin-top: 90px;
+    padding-top: 54px;
+    background: #f4f4f4;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
+    align-items: center;
+    gap: 37px;
+}
+.coments:hover{
+    background-color: #abd1df; 
+    transition: 0.5s;
+    transform: translateY(-25px)
+}
+.evaluation-cards{
+    width: 100%;
+    display: flex;
+    gap: 32px;
+}
+.coment-image{
+    width: 85px;
+    height: 85px;
+    border-radius: 50%;
+}
+.coment2{
+    width: 296.9px;
+    height: 129.8px;
+    font-family: "Raleway";
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 22px;
+    font-style: normal;
+    text-align: center;
+    color: #1a1a1b;
+}
+.coment-name{
+    font-family: "Raleway";
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 37px;
+    font-style: normal;
+    color: #4b54fa;
+}
+.forma{
+    width: 30px;
+    height: 27px;
+    margin-bottom: 30px;
+}
+.booking{
+    background-image: url(images/Clip\ \(1\).png);
+    height: 505px;
+    background-size: cover;
+}
+.booking-question{
+
+    
 }
